kubernetes/hw2/canary_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
      app: tssic
      env: canary
      version: '0.1'
  name: tssic-canary
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tssic
      env: canary
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tssic
        env: canary
        version: '0.1'
    spec:
      containers:
        - image: httpd:2.4
          imagePullPolicy: IfNotPresent
          name: tssic
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
