kubernetes/hw2/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
      app: tssic
      env: production
      version: '0.1'
  name: tssic-prod
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tssic
      env: production
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tssic
        env: production
        version: '0.1'
    spec:
      containers:
        - image: pakkenx/tssic:0.1
          imagePullPolicy: IfNotPresent
          name: tssic
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
          ports:
            - containerPort: 5000
          livenessProbe:
            failureThreshold: 2
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 5000
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 5000
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
