kubernetes/hw2/canary_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: tssic
  name: tssic-canary
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tssic
    env: canary
  type: ClusterIP
status:
  loadBalancer: {}
