kubernetes/hw2/canary_ingress_weight.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tssic-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  defaultBackend:
    service:
      name: tssic-canary
      port:
        number: 80
